--- a/app/views/default/bantuan/kategori.html
+++ b/app/views/default/bantuan/kategori.html
@@ -59,7 +59,8 @@
             <?php 
             if (!is_null($data['list_bantuan'])) { $time_card=0.2; foreach($data['list_bantuan']['data'] as
             $list_bantuan) { $delay_card=$delay_card + $time_card; ?>
-            <div class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-delay="<?= $delay_card.'s'; ?>">
+            <div class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-delay="<?= $delay_card.'s'; ?>"
+                data-id-bantuan="<?= $list_bantuan->id_bantuan; ?>">
                 <!-- Start Single Service -->
                 <div class="p-4 single-service animation">
                     <div
@@ -85,7 +86,7 @@
                         <div class="col">
                             <h6>Terkumpul</h6>
                             <p class="text-muted">Rp.
-                                <?= Output::tSparator($list_bantuan->total_donasi); ?>
+                                <?= $list_bantuan->total_donasi; ?>
                             </p>
                         </div>
                         <div class="col-auto text-end">
