--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -66,7 +66,7 @@
                     <span class="text-green">List Donasi</span>
                 </div>
                 <div class="right-header d-flex">
-                    <a href="/admin/donasi/buat" class="btn btn-sm btn-outline-primary">Buat Donasi</a>
+                    <!-- <a href="/admin/donasi/buat" class="btn btn-sm btn-outline-primary">Buat Donasi</a> -->
                     <div class="status" style="font-size: .5rem; right: 1.25rem;">
                         <div class="font-weight-bold text-black-50">Menampilkan <span class="text-orange">
                                 <?= count(is_countable($data['list_donasi']['data']) ? $data['list_donasi']['data'] : []); ?>
